updated consumption and finished fueleconomy

--- a/ConsumptionData/ConsumptionData.ipynb
+++ b/ConsumptionData/ConsumptionData.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 1,
       "metadata": {
         "id": "WpqLDmNMArDK"
       },
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -107,7 +107,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "e47d726b-aace-46cd-954c-c245e92f4457",
+              "ref": "9d384615-97de-4600-b0a8-facb080ef958",
               "rows": [
                 [
                   "0",
@@ -299,7 +299,7 @@
               "4                                                NaN                                   "
             ]
           },
-          "execution_count": 78,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -331,7 +331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 3,
       "metadata": {
         "id": "fK21PZKVC_wW"
       },
@@ -342,7 +342,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -367,7 +367,7 @@
                   "type": "integer"
                 }
               ],
-              "ref": "e50af9a7-8bc6-466c-95a0-7bfcf0909f54",
+              "ref": "c1704583-0e6f-4c97-ba7e-94e3f7fc22ff",
               "rows": [
                 [
                   "Date",
@@ -414,7 +414,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 80,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -435,7 +435,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -472,7 +472,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -502,7 +502,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "c0ba3f25-dc98-42e8-af8b-c98e575e1514",
+              "ref": "d1db4bfd-a491-4726-892a-bbe9bc25567b",
               "rows": [
                 [
                   "600",
@@ -652,7 +652,7 @@
               "609 1995-10-01                                  10130.694"
             ]
           },
-          "execution_count": 82,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -696,7 +696,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -726,7 +726,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "f6b4f40b-8197-4e1d-90c1-47284568c020",
+              "ref": "6d8802a6-2ff4-4fe8-bbc8-9c20dcd0b4e8",
               "rows": [
                 [
                   "count",
@@ -864,7 +864,7 @@
               "std                                   803.788992  "
             ]
           },
-          "execution_count": 83,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -875,7 +875,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -905,7 +905,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -934,7 +934,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -969,7 +969,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1866,7 +1866,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1903,7 +1903,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "d2966958-3d95-4e28-b538-95df099c9cfa",
+              "ref": "9dc85a99-5e23-4e28-bae4-c4eb7d00d128",
               "rows": [
                 [
                   "601",
@@ -1981,7 +1981,7 @@
                   "hovertemplate": "Gasoline_Consumption(Millions of Gallons)=%{y}<extra></extra>",
                   "legendgroup": "",
                   "marker": {
-                    "color": "#636efa"
+                    "color": "#9BC6E3"
                   },
                   "name": "",
                   "notched": false,
@@ -2831,7 +2831,8 @@
         "    title=\"Outlier Detection: U.S. Monthly Gasoline Consumption\",\n",
         "    points=\"all\",\n",
         "    height=900,\n",
-        "    width=1100\n",
+        "    width=1100,\n",
+        "    color_discrete_sequence=[colors[\"consumption\"]]\n",
         ")\n",
         "figc2.update_layout(template=\"plotly_white\", title_x=0.5, height=500)\n",
         "figc2.show()"
@@ -2848,7 +2849,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4072,7 +4073,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 14,
       "metadata": {
         "id": "pz5ilKGa80NU"
       },
