added export to fuel economy

--- a/FuelEconomy/FuelEconomy.ipynb
+++ b/FuelEconomy/FuelEconomy.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 91,
       "metadata": {
         "id": "WpqLDmNMArDK"
       },
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 92,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -246,7 +246,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "ebb9f306-ac77-4f77-bd01-dfcec608e4ab",
+              "ref": "ccb9316e-f9ef-474f-b3d6-7f9fa12589ba",
               "rows": [
                 [
                   "0",
@@ -637,7 +637,7 @@
               "[5 rows x 35 columns]"
             ]
           },
-          "execution_count": 66,
+          "execution_count": 92,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -669,7 +669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 93,
       "metadata": {
         "id": "fK21PZKVC_wW"
       },
@@ -680,7 +680,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 94,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -705,7 +705,7 @@
                   "type": "integer"
                 }
               ],
-              "ref": "4876e102-897f-4da9-a96e-7b2576b0a7ed",
+              "ref": "05b6c9a0-1efa-4fb2-be9e-6a45e6d8a1a4",
               "rows": [
                 [
                   "Fuel economy, mpg",
@@ -892,7 +892,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 68,
+          "execution_count": 94,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -913,7 +913,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 95,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -963,7 +963,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "68d06f18-bd88-4e2b-8c09-2693e91ca572",
+              "ref": "3dd53089-efa6-4aff-812b-85de648c8e30",
               "rows": [
                 [
                   "0",
@@ -1102,7 +1102,7 @@
               "4                  1992  23.07    17.84         17.48  17.92      16.20"
             ]
           },
-          "execution_count": 69,
+          "execution_count": 95,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1119,7 +1119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 96,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1155,7 +1155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 97,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1205,7 +1205,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "f4651e9d-4443-405a-a4ce-50b71f9ffa4b",
+              "ref": "e5b0300a-03e1-4aaa-9e8f-9071e2bd44c9",
               "rows": [
                 [
                   "7",
@@ -1439,7 +1439,7 @@
               "16                2004-01-01  23.14    19.97         15.74  19.16      16.47"
             ]
           },
-          "execution_count": 71,
+          "execution_count": 97,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1471,7 +1471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 98,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1521,7 +1521,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "aabb7506-22d1-4d35-995d-3c8edf4977e5",
+              "ref": "93dc645c-a9e0-4184-810f-5591fa31d66f",
               "rows": [
                 [
                   "count",
@@ -1727,7 +1727,7 @@
               "std                 1.975641   2.878855  "
             ]
           },
-          "execution_count": 72,
+          "execution_count": 98,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1738,7 +1738,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 99,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1778,7 +1778,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 100,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1816,7 +1816,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 101,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1850,7 +1850,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 102,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2744,7 +2744,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 103,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2786,7 +2786,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "97bc0732-b4cf-492e-aa89-edafee0fe816",
+              "ref": "5a31e3f1-efbb-4d5b-8409-b73fc8bd496c",
               "rows": [],
               "shape": {
                 "columns": 3,
@@ -3713,7 +3713,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 104,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3746,7 +3746,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 105,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4640,7 +4640,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 106,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4682,7 +4682,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "a614c93f-80d1-4111-9763-c29eaf3a18b1",
+              "ref": "db3efe2f-3c7f-4f53-b77c-f0dec7387c75",
               "rows": [],
               "shape": {
                 "columns": 3,
@@ -5609,7 +5609,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 107,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5642,7 +5642,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 108,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -6536,7 +6536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 109,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -6578,7 +6578,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "f85d1742-e4be-4b76-9a2c-462914879bd8",
+              "ref": "899bd029-a014-4007-a090-731b9babbcdc",
               "rows": [],
               "shape": {
                 "columns": 3,
@@ -7505,7 +7505,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 110,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -7537,7 +7537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 111,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -8432,7 +8432,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 112,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -8474,7 +8474,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "09e95293-f5da-412c-860a-c12bbcdfa2ca",
+              "ref": "26ce41fa-a58d-47dd-a31a-6514cccb1d2d",
               "rows": [],
               "shape": {
                 "columns": 3,
@@ -9401,7 +9401,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 113,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -9414,7 +9414,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Average monthly fueleconomy for Vans: 20.31\n",
+            "Average fueleconomy for Vans: 20.31\n",
             "Standard deviation: 1.98\n",
             "Coefficient of variation: 9.73% \n",
             "\n"
@@ -9434,7 +9434,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 114,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -10328,7 +10328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 115,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -10370,7 +10370,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "3e34167c-c2d5-4f72-b862-132c927780d3",
+              "ref": "3b276c95-f4bf-45e3-9488-ce8ccdd582eb",
               "rows": [],
               "shape": {
                 "columns": 3,
@@ -11297,7 +11297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 116,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -12412,6 +12412,26 @@
         "    height=600\n",
         ")\n",
         "fig_line.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Export"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 117,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Save as CSV\n",
+        "fueleconomy.to_csv(\"cleanedfueleconomy.csv\", index=False)\n",
+        "\n",
+        "# Optional: Save as Pickle for faster loading\n",
+        "fueleconomy.to_pickle(\"cleanedfueleconomy.pkl\")"
       ]
     }
   ],
