more changes, finished vehicle registrations

--- a/ConsumptionData/ConsumptionData.ipynb
+++ b/ConsumptionData/ConsumptionData.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 15,
       "metadata": {
         "id": "WpqLDmNMArDK"
       },
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -107,7 +107,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "b5dff889-94f2-4fae-ae1d-8b976024ad0b",
+              "ref": "ca30a3f9-09c6-491c-b39a-b62d9ce93abf",
               "rows": [
                 [
                   "0",
@@ -299,7 +299,7 @@
               "4                                                NaN                                   "
             ]
           },
-          "execution_count": 2,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -331,7 +331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 17,
       "metadata": {
         "id": "fK21PZKVC_wW"
       },
@@ -342,7 +342,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -367,7 +367,7 @@
                   "type": "integer"
                 }
               ],
-              "ref": "04ac8c18-6c21-423d-b513-af4e126aaa75",
+              "ref": "abeae562-69cd-48ef-b0f3-de3d7fa649cf",
               "rows": [
                 [
                   "Date",
@@ -414,7 +414,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -435,7 +435,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -472,7 +472,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -502,7 +502,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "fc3e659a-3a3c-49ad-b42c-c369d908cc4a",
+              "ref": "e0e93de0-fc4c-4d77-a227-ae7118d091fa",
               "rows": [
                 [
                   "600",
@@ -652,7 +652,7 @@
               "609 1995-10-01                                  10130.694"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -696,7 +696,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -726,7 +726,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "7e121718-56f1-4e27-a27d-2fff24db45d3",
+              "ref": "97f20d9a-97b6-43fd-addb-40870455c99f",
               "rows": [
                 [
                   "count",
@@ -864,7 +864,7 @@
               "std                                   803.788992  "
             ]
           },
-          "execution_count": 7,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -875,7 +875,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -905,7 +905,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -934,7 +934,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -969,7 +969,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1866,7 +1866,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1903,7 +1903,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "29b42f75-9fbb-4f07-8940-e655f40c5bd3",
+              "ref": "099feb7b-0ca0-4f6b-970e-e10dea16fdab",
               "rows": [
                 [
                   "601",
@@ -2849,7 +2849,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4036,7 +4036,7 @@
       "source": [
         "''' Visualize Consumption Over Time '''\n",
         "\n",
-        "figc3 = px.line(\n",
+        "fig_line = px.line(\n",
         "    consumption,\n",
         "    x=\"Date\",\n",
         "    y=\"Gasoline_Consumption(Millions of Gallons)\",\n",
@@ -4049,7 +4049,7 @@
         ")\n",
         "\n",
         "# Customize layout\n",
-        "figc3.update_layout(\n",
+        "fig_line.update_layout(\n",
         "    template=\"plotly_white\",\n",
         "    title_x=0.5,\n",
         "    xaxis_title=\"Date\",\n",
@@ -4061,7 +4061,7 @@
         "    width=1200\n",
         ")\n",
         "\n",
-        "figc3.show()"
+        "fig_line.show()"
       ]
     },
     {
@@ -4073,7 +4073,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 28,
       "metadata": {
         "id": "pz5ilKGa80NU"
       },
