finished fuel prices, added export to registrations

--- a/VehicleRegistrations/VehicleRegistration.ipynb
+++ b/VehicleRegistrations/VehicleRegistration.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 54,
       "metadata": {
         "id": "WpqLDmNMArDK"
       },
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 55,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -202,7 +202,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "391ff342-3803-43d8-9228-9d39f2fb4e29",
+              "ref": "34eaa99e-4107-435f-b9ff-41bc0d75c4d1",
               "rows": [
                 [
                   "0",
@@ -452,7 +452,7 @@
               "[3 rows x 28 columns]"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 55,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -484,7 +484,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 56,
       "metadata": {
         "id": "fK21PZKVC_wW"
       },
@@ -495,7 +495,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 57,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -520,7 +520,7 @@
                   "type": "integer"
                 }
               ],
-              "ref": "3469a40b-72c6-4384-85b5-34be486051f5",
+              "ref": "04642475-c8e6-40b8-92f8-4426697e25dc",
               "rows": [
                 [
                   "Inventory",
@@ -672,7 +672,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 57,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -693,7 +693,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 58,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -733,7 +733,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "0cb5cb55-4538-4447-a670-f84545f0fb11",
+              "ref": "eb263ac2-3663-4f92-bc28-6f58a8d495fc",
               "rows": [
                 [
                   "0",
@@ -864,7 +864,7 @@
               "4                             187170420.0  "
             ]
           },
-          "execution_count": 5,
+          "execution_count": 58,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -881,7 +881,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 59,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -915,7 +915,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 60,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -955,7 +955,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "1b579d95-2105-4bb4-9147-0df05db79185",
+              "ref": "4e8be6b1-b71c-42bc-a0da-27fa4d66acd1",
               "rows": [
                 [
                   "0",
@@ -1171,7 +1171,7 @@
               "9                             198888912.0  "
             ]
           },
-          "execution_count": 7,
+          "execution_count": 60,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1194,7 +1194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 61,
       "metadata": {
         "id": "x_dPSYX0LDRz"
       },
@@ -1219,7 +1219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 62,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1259,7 +1259,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "a7d6daa1-1447-4fbe-8af7-8165fa3fe89b",
+              "ref": "c05314ee-08a8-42c3-8252-de59c0abf05d",
               "rows": [
                 [
                   "count",
@@ -1431,7 +1431,7 @@
               "std                    1.977060e+06      1.623333e+07  "
             ]
           },
-          "execution_count": 9,
+          "execution_count": 62,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1442,7 +1442,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 63,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1485,7 +1485,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 64,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1532,7 +1532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 65,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1565,7 +1565,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2459,7 +2459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 67,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2501,7 +2501,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "0eae2d34-9337-4464-af5c-931b38f3e2af",
+              "ref": "890860ef-a097-4c06-91e3-0a7e8b56893b",
               "rows": [],
               "shape": {
                 "columns": 3,
@@ -3427,7 +3427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 68,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3440,7 +3440,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Average monthly motorcycle registrations: 6,806,726.41\n",
+            "Average annual motorcycle registrations: 6,806,726.41\n",
             "Standard deviation: 1,977,060.34\n",
             "Coefficient of variation: 29.05% \n",
             "\n"
@@ -3460,7 +3460,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 69,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4354,7 +4354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 70,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4396,7 +4396,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "ed8febb3-9533-4d33-b8ba-27cb5e3539c9",
+              "ref": "6dd19851-77ac-48ff-839e-ba6c5c7c01eb",
               "rows": [],
               "shape": {
                 "columns": 3,
@@ -5322,7 +5322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5335,7 +5335,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Average monthly licensed drivers: 205,630,124.95\n",
+            "Average Annual licensed drivers: 205,630,124.95\n",
             "Standard deviation: 16,233,334.02\n",
             "Coefficient of variation: 7.89% \n",
             "\n"
@@ -5355,7 +5355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 72,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -6250,7 +6250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 73,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -6292,7 +6292,7 @@
                   "type": "float"
                 }
               ],
-              "ref": "1e6c8dcf-12e6-4ece-bef1-81c46719e9ea",
+              "ref": "5500a0f6-aec4-4c8a-ad0e-cda8558eba87",
               "rows": [],
               "shape": {
                 "columns": 3,
@@ -7218,7 +7218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 74,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -8234,13 +8234,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Export"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 75,
       "metadata": {
         "id": "A19tlw8yLDR1"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Save as CSV\n",
+        "registrations.to_csv(\"cleanedregistrations.csv\", index=False)\n",
+        "\n",
+        "# Optional: Save as Pickle for faster loading\n",
+        "registrations.to_pickle(\"cleanedregistrations.pkl\")"
+      ]
     }
   ],
   "metadata": {
